acmeair/routes-x3wk/acmeair-bookingservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-booking-route
spec:
  host: acmeair.apps.x3wk.dmz
  path: /booking
  to:
    kind: Service
    name: acmeair-booking-service
