acmeair/routes-x3wk/acmeair-customerservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-customer-route
spec:
  host: acmeair.apps.x3wk.dmz
  path: /customer
  to:
    kind: Service
    name: acmeair-customer-service
