acmeair/routes-x3wk/acmeair-flightservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-flight-route
spec:
  host: acmeair-rhacm.apps.x3wk.dmz
  path: /flight
  to:
    kind: Service
    name: acmeair-flight-service
